# RKS-KEYBOARD

./: .gitignore  BOM.csv  BOM_INR.xlsx  README.md  key bom.xlsx  layout.json
CAD/: Back.SLDPRT  back.STL  front.SLDPRT  onshape.md  plate.SLDPRT  plate.STEP  plate.STL
CAD/Sliced/: 1-back.SLDPRT  1-back.STEP  1-back.STL  1-front.SLDPRT  1-front.STEP  1-front.STL  1-plate.3mf  1-plate.SLDPRT  1-plate.STEP  1-plate.STL  2-back.SLDPRT  2-back.STEP  2-back.STL  2-front.SLDPRT  2-front.STEP  2-front.STL  2-plate.SLDPRT  2-plate.STEP  2-plate.STL  Assembly.SLDASM  Assembly.STEP
Firmware/: CMakeLists.txt
Firmware/src/: main.cpp  menu.cpp  menu.h  tusb_config.h
Firmware/src/components/: Display.cpp  Display.h  Font.h  Keyboard.cpp  Keyboard.h  LED.cpp  LED.h
Firmware/src/config/: main.cpp  themes.cpp  themes.h  user_config.h
Firmware/src/lib/ws2812/: WS2812.cpp  WS2812.hpp
Firmware/src/setup/: HID_setup.cpp  HID_setup.h  TUD_setup.h  pin_setup.h
PCB/: PCB.kicad_pro  PCB.kicad_sch
